# GitNexus

./: .gitignore  AGENTS.MD  README.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  mcp-improvements-plan.md
.planning/phases/01-foundation-security/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-resilience/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-03-PLAN.md  (+7 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  folder-upload-2026.md
docs/: Runpod.txt  memvid full docs.txt
docs/ai/: AI_BIBLE_MV2_MCP.contract.v1.json  AI_BIBLE_MV2_MCP.md
gitnexus/: .env.example  code-intelligence.skill  package.json
gitnexus-mcp/: package-lock.json  package.json
gitnexus/.adrflow/: decisions.mv2
gitnexus/docs/: Pony - MCP2.md  Understanding the File System Access API
gitnexus/src/: App.tsx  repomix-output.md  vite-env.d.ts
memvid-export-api/: .env.example  Cargo.toml  Dockerfile  MEMVID_EXPORT_API_PITCH.md  README.md  docker-compose.coolify.yml
memvid-export-api/docker/: start-memvid.sh
memvid-export-api/runpod-worker/: Dockerfile  README.md  handler.py  requirements.txt  runpod-endpoint.update.example.json
memvid-export-api/src/: api.rs  artifact_store.rs  auth.rs  config.rs  embedding.rs  main.rs  mcp_api.rs  mcp_index.rs  memvid_writer.rs  models.rs  queue.rs  rate_limit.rs  runpod.rs  runpod_execute.rs  transform.rs
src/components/: GraphCanvas.tsx
src/hooks/: useAppState.tsx  useSigma.ts
(+55 files in other folders)
